<resources>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banners_id">ca-app-pub-4114338578467810/2489943804</string>
    <string name="admob_products_id">ca-app-pub-4114338578467810/1384089159</string>
    <string name="admob_account_id">ca-app-pub-4114338578467810/8879435793</string>
    <string name="admob_test_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_test_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="font_app_black">fonts/lato/App-Font-Black.ttf</string>
    <string name="font_app_black_italic">fonts/lato/App-Font-BlackItalic.ttf</string>
    <string name="font_app_bold">fonts/lato/App-Font-Bold.ttf</string>
    <string name="font_app_bold_italic">fonts/lato/App-Font-BoldItalic.ttf</string>
    <string name="font_app_hairline">fonts/lato/App-Font-Hairline.ttf</string>
    <string name="font_app_hairline_italic">fonts/lato/App-Font-HairlineItalic.ttf</string>
    <string name="font_app_heavy">fonts/lato/App-Font-Heavy.ttf</string>
    <string name="font_app_heavy_italic">fonts/lato/App-Font-HeavyItalic.ttf</string>
    <string name="font_app_italic">fonts/lato/App-Font-Italic.ttf</string>
    <string name="font_app_light">fonts/lato/App-Font-Light.ttf</string>
    <string name="font_app_light_italic">fonts/lato/App-Font-LightItalic.ttf</string>
    <string name="font_app_medium">fonts/lato/App-Font-Medium.ttf</string>
    <string name="font_app_medium_italic">fonts/lato/App-Font-MediumItalic.ttf</string>
    <string name="font_app_regular">fonts/lato/App-Font-Regular.ttf</string>
    <string name="font_app_semibold">fonts/lato/App-Font-Semibold.ttf</string>
    <string name="font_app_semibold_italic">fonts/lato/App-Font-SemiboldItalic.ttf</string>
    <string name="font_app_thin">fonts/lato/App-Font-Thin.ttf</string>
    <string name="font_app_thin_italic">fonts/lato/App-Font-ThinItalic.ttf</string>
    <string name="font_raleway_black">fonts/raleway/Raleway-Black.ttf</string>
    <string name="font_raleway_black_italic">fonts/raleway/Raleway-BlackItalic.ttf</string>
    <string name="font_raleway_bold">fonts/raleway/Raleway-Bold.ttf</string>
    <string name="font_raleway_bold_italic">fonts/raleway/Raleway-BoldItalic.ttf</string>
    <string name="font_raleway_hairline">fonts/raleway/Raleway-Hairline.ttf</string>
    <string name="font_raleway_hairline_italic">fonts/raleway/Raleway-HairlineItalic.ttf</string>
    <string name="font_raleway_heavy">fonts/raleway/Raleway-Heavy.ttf</string>
    <string name="font_raleway_heavy_italic">fonts/raleway/Raleway-HeavyItalic.ttf</string>
    <string name="font_raleway_italic">fonts/raleway/Raleway-Italic.ttf</string>
    <string name="font_raleway_light">fonts/raleway/Raleway-Light.ttf</string>
    <string name="font_raleway_light_italic">fonts/raleway/Raleway-LightItalic.ttf</string>
    <string name="font_raleway_medium">fonts/raleway/Raleway-Medium.ttf</string>
    <string name="font_raleway_medium_italic">fonts/raleway/Raleway-MediumItalic.ttf</string>
    <string name="font_raleway_regular">fonts/raleway/Raleway-Regular.ttf</string>
    <string name="font_raleway_semibold">fonts/raleway/Raleway-Semibold.ttf</string>
    <string name="font_raleway_semibold_italic">fonts/raleway/Raleway-SemiboldItalic.ttf</string>
    <string name="font_raleway_thin">fonts/raleway/Raleway-Thin.ttf</string>
    <string name="font_raleway_thin_italic">fonts/raleway/Raleway-ThinItalic.ttf</string>
    <string name="return_policy">Return Policy</string>
    <string name="base_html_template_header" formatted="false">
        <![CDATA["<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
        <html>
            <head>
                <style type="text/css">

                    table {
                        width: auto;
                    }
                    hr {
                        border: 0;
                        width: 80%;
                        background-color: #FFFFFF;
                        height: 1px;
                    }
                    a {
                        color: #007CF7;
                        text-decoration: none;
                    }

                    a:link{
                        color: #007CF7;
                        text-decoration: underline;
                    }

                    li{
                        font-family: __BODY_FONT_NAME__;
                        color: __BODY_FONT_COLOR__;
                    }

                    ul {
                        list-style-position: inside;
                        padding-left:0px;
                    }

                    ol {
                        padding-left:24px;
                    }

                    b {
                        font-family: __BOLD_FONT_NAME__;
                        color: __BOLD_FONT_COLOR__;
                    }

                    br {
                        font-family: __BODY_FONT_NAME__;
                        color: #6E6868;
                    }

                    img {
                        display: inline;
                        height: auto;
                        max-width: 100%;
                    }

                    body {
                        -webkit-text-size-adjust: none;
                        font-family: __BODY_FONT_NAME__;
                        color: __BOLD_FONT_COLOR__;
                        font-family: __BODY_FONT_NAME__;
                        font-size: 14px;
                        background: transparent;
                        word-wrap: break-word;
                        padding-left: 0px;
                        padding-right: 0px;
                        padding-top: 0px;
                    }

                    embed{
                        width:100%;
                    }

                    object{
                        width:100%;

                    }

                    iframe{
                        width:100%;

                    }

                    html {
                        -webkit-text-size-adjust: none; / Never autoresize text /
                    }
                </style>
                <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'>
            </head>
        <body>"]]>
    </string>
    <string name="or_text">or</string>
    <string name="not_a_member_yet_text">Not a member yet?</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="password_hint">******</string>
    <string name="email_hint">example@email.com</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="you_currently_do_not_have_any_addresses">you do not currently have any address
    </string>
    <string name="welcome_to_my_address">welcome to my address!</string>
    <string name="your_cart_is_currently_empty">welcome to my basket!</string>
    <string name="you_have_not_added_any_items_in_your_shopping_cart">you do not currently have any items
    </string>
    <string name="now">now</string>
    <string name="send_to_email">Send to Email</string>
    <string name="submit">Submit</string>
    <string name="select_a_subject">Select Subject</string>
    <string name="my_account">My Account</string>
    <string name="welcome_remark_title_orders">welcome to my orders!</string>
    <string name="welcome_remark_subtitle_orders">you do not currently have any orders.</string>
    <string name="shop">Shop</string>
    <string name="wishlist">Wishlist</string>
    <string name="browse">Browse</string>
    <string name="my_basket">My Basket</string>
</resources>