<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/no_addresses_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/bg_edit_text_rounded"
    android:paddingLeft="@dimen/place_holder_padding"
    android:paddingRight="@dimen/place_holder_padding"
    android:visibility="visible"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/placeholder_icon_size"
            android:layout_height="@dimen/placeholder_icon_size"
            android:layout_gravity="center"
            android:src="@drawable/ic_address_placeholder" />

        <TextView
            fontPath="@string/font_app_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome_to_my_address"
            android:textSize="@dimen/text_size_xxxlarge" />

        <TextView
            fontPath="@string/font_app_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/you_currently_do_not_have_any_addresses"
            android:textColor="#9f9f9f"
            android:textSize="@dimen/text_size_xlarge" />

    </LinearLayout>


</RelativeLayout>
