<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/background_default"
    android:orientation="vertical">

    <TextView
        android:id="@+id/controller_contact_select_subject_header"
        fontPath="@string/font_app_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@string/font_app_black"
        android:gravity="center_vertical"
        android:text="@string/select_a_subject"
        android:textColor="@color/text_description"
        android:textSize="@dimen/text_size_headline2"
        tools:ignore="MissingPrefix" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_contact_select_subject_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never" />

</LinearLayout>
