<LinearLayout android:id="@+id/templateEditTextWrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:scrollbars="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/account_header"
        layout="@layout/partial_toolbar_login" />

    <TextView
        android:id="@+id/controller_account_email_guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@color/dark_icon"
        android:layout_marginTop="20dp"
        fontPath="@string/font_app_light"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/dark_icon"
                fontpath="@string/font_app_medium"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/controller_password_verification_edittext_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/controller_password_verification_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:hint="@string/password_hint"
                    android:padding="15dp"
                    android:paddingEnd="0dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:textColor="@color/dark_icon"
                    android:textColorHint="#c1c1c1"
                    style="@style/DDEditTextStyle"
                    fontPath="@string/font_app_medium"
                    tools:ignore="Deprecated"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </RelativeLayout>


    <Button
        android:id="@+id/controller_password_verification_submit_button"
        style="@style/DDButtonStyle"
        fontPath="@string/font_app_semibold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/submit"
        android:textSize="@dimen/text_size_xlarge"/>


</LinearLayout>