<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/no_cart_items_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/placeholder_icon_size"
            android:layout_height="@dimen/placeholder_icon_size"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/ic_cart_placeholder" />

        <TextView
            fontPath="@string/font_app_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/place_holder_padding"
            android:paddingRight="@dimen/place_holder_padding"
            android:text="@string/your_cart_is_currently_empty"
            android:textSize="@dimen/text_size_xxxlarge" />

        <TextView
            fontPath="@string/font_app_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_button_height"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/default_button_height"
            android:text="@string/you_have_not_added_any_items_in_your_shopping_cart"
            android:textColor="#9f9f9f"
            android:textSize="@dimen/text_size_normal" />

    </LinearLayout>


</RelativeLayout>