<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgot_password_form_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/controller_login_toolbar"
            layout="@layout/partial_toolbar_arrow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/screen_padding"
            android:orientation="vertical">

            <EditText
                android:id="@+id/controller_forgot_password_email_edittext"
                style="@style/DDEditTextPlainStyle"
                fontPath="@string/font_app_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:fitsSystemWindows="false"
                android:hint="@string/email_address"
                android:singleLine="true"
                android:textColor="@color/dark_icon"
                android:textColorHint="#c1c1c1"
                tools:ignore="Deprecated" />

            <Button
                android:id="@+id/controller_forgot_password_send_button"
                style="@style/DDButtonStyle"
                fontPath="@string/font_app_semibold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_to_email"
                android:textSize="@dimen/text_size_xlarge" />

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>