<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/no_orders_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="@dimen/placeholder_padding"
        android:paddingRight="@dimen/placeholder_padding"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/placeholder_icon_width"
            android:layout_height="@dimen/placeholder_icon_height"
            android:layout_gravity="center"
            android:src="@drawable/ic_orders_placeholder"/>

        <TextView
            fontPath="@string/font_app_medium"
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_remark_title_orders"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size_headline1"/>

        <TextView
            fontPath="@string/font_app_light"
            android:textColor="#9f9f9f"
            android:textSize="@dimen/text_size_headline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_remark_subtitle_orders"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <!--<com.mysale.genie.views.custom.GenieButton-->
    <!--android:id="@+id/my_orders_shop_now_button"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="45dp"-->
    <!--style="@style/default_button"-->
    <!---->
    <!--android:text="shop now"-->
    <!--android:textSize="20sp"-->
    <!--android:gravity="center"-->
    <!--android:layout_margin="@dimen/activity_horizontal_margin"-->
    <!--android:layout_alignParentBottom="true"/>-->

</RelativeLayout>
