<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/controller_login_fb_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_button_height"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/login_default_button"
        android:clickable="true"
        android:elevation="2.5dp"
        android:padding="10dp">

        <RelativeLayout
            tools:ignore="UselessParent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/controller_login_facebook_image_view"
                tools:ignore="ContentDescription"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/facebook" />

            <TextView
                android:id="@+id/controller_login_with_facebook_text"
                fontPath="@string/font_app_semibold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/controller_login_facebook_image_view"
                android:gravity="center"
                android:text="@string/sign_in_with_facebook"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_headline2" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_view_divider_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">


        <View
            android:id="@+id/login_view_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#e4e3e3" />


        <TextView
            android:id="@+id/divider_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="#FFFFFF"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/or_text"
            android:textColor="#aeaeae"
            android:textSize="@dimen/text_size_small" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_default">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textColor="@color/text_medium"
            android:textSize="@dimen/text_size_headline3" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_login_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="10dp"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text_rounded"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="15dp"
                android:textColor="#919191"
                android:textColorHint="#c1c1c1"
                android:textSize="@dimen/text_size_headline3" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/password"
            android:textColor="@color/text_medium"
            android:textSize="@dimen/text_size_headline3" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_login_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text_rounded"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="#919191"
                android:textColorHint="#c1c1c1"
                android:textSize="@dimen/text_size_headline3" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            style="@style/DDButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="@dimen/text_size_headline2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_a_member_yet_text"
                android:textColor="#919191"
                android:textSize="@dimen/text_size_headline3" />

            <TextView
                android:id="@+id/fragment_login_signup_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="0dp"
                android:paddingLeft="5dp"
                android:paddingRight="0dp"
                android:paddingStart="5dp"
                android:text="@string/sign_up"
                android:textColor="#00B1B5"
                android:textSize="@dimen/text_size_headline3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="0dp"
                android:paddingLeft="5dp"
                android:paddingRight="0dp"
                android:paddingStart="5dp"
                android:text="@string/now"
                android:textColor="#919191"
                android:textSize="@dimen/text_size_headline3" />

        </LinearLayout>

        <TextView
            android:id="@+id/controller_login_forgot_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/forgot_password"
            android:textColor="#00B1B5"
            android:textSize="@dimen/text_size_headline3" />


    </LinearLayout>

</LinearLayout>
